planner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
    spec:
#      securityContext:
#        runAsUser: 1001
#        runAsGroup: 1000
      restartPolicy: Always
      containers:
      - name: planner
        image: mastercloudapps/planner:v1.23
        securityContext:
          allowPrivilegeEscalation: false
        command: ["/bin/bash", "-c"]
        args:
        - "./wait-for-it.sh weatherservice:9090 -t 500 -- ./wait-for-it.sh toposervice:8181 -t 500 -- ./wait-for-it.sh rabbitmq:5672 -t 500 -- java -jar planner.jar"
        ports:
          - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: planner
  labels:
    app: planner
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: planner-port
  selector:
    app: planner
  type: ClusterIP
