toposervice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
#      securityContext:
#        runAsUser: 1001
#        runAsGroup: 1000
      restartPolicy: Always
      containers:
      - name: toposervice
        image: mastercloudapps/toposervice:v1.23
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: toposervice
  labels:
    app: toposervice
spec:
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: toposervice-port
  selector:
    app: toposervice
  type: ClusterIP
