weatherservice.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: weatherservice
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
#      securityContext:
#        runAsUser: 1001
#        runAsGroup: 1000
      restartPolicy: Always
      containers:
      - name: weatherservice
        image: mastercloudapps/weatherservice:v1.23
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: weatherservice
  labels:
    app: weatherservice
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: weatherservice-port
  selector:
    app: weatherservice
  type: ClusterIP
