ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: practicaserver
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serverservice
            port:
              number: 8080
