ingress-toposervice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: practicatoposervice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - http:
      paths:
      - path: /toposervice/(.+)
        pathType: Prefix
        backend:
          service:
            name: toposervice
            port:
              number: 8181
